Added a link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
   </head>
   <body>
     <h1>Welcome to Greenland</h1>
+    <footer>
+      <p>
+        This project was coded by Laetitia Saunders and is open-sourced on
+        <a href="https://github.com/ls-95/travel-project" target="_blank"
+          >GitHub</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
