--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>Welcome to Greenland</h1>
+    <h2>A North American autonomous territory of the Kingdom of Denmark</h2>
     <footer>
       <p>
         This project was coded by Laetitia Saunders and is open-sourced on
