--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Welcome to Greenland</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <title>Welcome to Greenland</title>
   </head>
   <body>
-    <h1>Welcome to Greenland</h1>
-    <h2>A North American autonomous territory of the Kingdom of Denmark</h2>
-    <footer>
-      <p>
-        This project was coded by Laetitia Saunders and is open-sourced on
-        <a href="https://github.com/ls-95/travel-project" target="_blank"
-          >GitHub</a
-        >
-      </p>
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Greenland</h1>
+        <h2>
+          A North American autonomous territory<br />
+          of the Kingdom of Denmark
+        </h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        <p>
+          This project was coded by Laetitia Saunders and is open-sourced on
+          <a href="https://github.com/ls-95/travel-project" target="_blank"
+            >GitHub</a
+          >
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
