--- a/index.html
+++ b/index.html
@@ -23,13 +23,54 @@
         </h2>
         <a href="#more">Learn more</a>
       </header>
+
       <footer>
-        <p>
-          This project was coded by Laetitia Saunders and is open-sourced on
-          <a href="https://github.com/ls-95/travel-project" target="_blank"
-            >GitHub</a
-          >
-        </p>
+        <section class="grid">
+          <div>
+            <h3>Greenland</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://visitgreenland.com/about-greenland"
+                  target="_blank"
+                  >About Greenland</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://visitgreenland.com/things-to-do/"
+                  target="_blank"
+                  >Things to do</a
+                >
+              </li>
+              <li>
+                <a href="https://visitgreenland.com/destinations/"
+                  >Destinations</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi, my name is Laetitia, and I've always been fascinated by
+              Greenland. It's the world's largest island, mostly covered in ice,
+              with a rich Inuit culture and a serene, untouched landscape. These
+              features have always captivated me.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I've created this page as part of a project SheCodes Responsive to
+              develop my coding skills.<br />
+              This project was coded by Laetitia Saunders and is
+              <a href="https://github.com/ls-95/travel-project" target="_blank"
+                >open-sourced</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
