Added first section of the project

--- a/index.html
+++ b/index.html
@@ -23,9 +23,50 @@
         </h2>
         <a href="#more">Learn more</a>
       </header>
-
+      <main>
+        <section class="grid grid-2-colums">
+          <div>
+            <img
+              src="/images/churchgreenland.jpg"
+              alt=""
+              class="resize-photo"
+            />
+          </div>
+          <div>
+            <h2>Why Greenland?</h2>
+            <h3>The world's largest island</h3>
+            <p>
+              Greenland is a destination like no other, offering a unique blend
+              of natural beauty, adventure, and cultural richness that makes it
+              a must-visit for any traveler. The island's vast, pristine
+              landscapes are dominated by towering glaciers, dramatic fjords,
+              and the expansive Greenland Ice Sheet, providing breathtaking
+              scenery and unparalleled photo opportunities. Visitors can witness
+              the awe-inspiring Northern Lights during the winter months or
+              experience the endless daylight of the Arctic summer. Whether it's
+              hiking through rugged terrain, kayaking among icebergs, or simply
+              enjoying the tranquility of this remote paradise, Greenland offers
+              a sense of adventure and discovery that is hard to find elsewhere.
+            </p>
+            <p>
+              Beyond its natural wonders, Greenland is home to a vibrant Inuit
+              culture with a history that spans thousands of years. Travelers
+              can immerse themselves in the local traditions by visiting small,
+              picturesque villages, where they can learn about traditional
+              hunting and fishing practices, enjoy authentic Greenlandic
+              cuisine, and experience the warmth and hospitality of the Inuit
+              people. The island also boasts unique wildlife, including polar
+              bears, whales, and seabirds, making it a haven for nature
+              enthusiasts and wildlife photographers. With its combination of
+              stunning landscapes, rich cultural heritage, and opportunities for
+              outdoor adventure, Greenland is a destination that promises an
+              unforgettable and truly unique travel experience.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow">
           <div>
             <h3>Greenland</h3>
             <ul>
