Added cards to the project and organized photos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img
               src="/images/churchgreenland.jpg"
               alt=""
-              class="resize-photo"
+              class="responsive-image"
             />
           </div>
           <div>
@@ -62,6 +62,110 @@
               outdoor adventure, Greenland is a destination that promises an
               unforgettable and truly unique travel experience.
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">Events</h2>
+          <h3 class="text-center">Upcoming events in Greenland</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="/images/disko-bay-food-festival.jpg"
+                  alt="Disko Bay Food Festival"
+                  class="responsive-image"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Disko Bay Food Festival</h4>
+                <p>
+                  The Disko Bay Food Festival is for food lovers looking for a
+                  unique culinary experience! Every year during the summer, come
+                  to Qasigiannguit to discover Greenlandic cuisine with dishes
+                  prepared by renowned chefs, including Inunnguaq Hegelund and
+                  Jens Jørgen Schmidt in 2024. Amateurs and professionals alike
+                  can enter the competition, but above all, it’s an opportunity
+                  for participants (locals and visitors alike) to discover and
+                  learn about the unique flavors of Greenland!
+                </p>
+                <h5>Date 📅</h5>
+                <p>June 30, 2024 - July 1, 2024</p>
+                <h5>Location 📍</h5>
+                <p>Qasigiannguit</p>
+                <a
+                  href="https://visitgreenland.com/event/diskobay-food-festival/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="/images/qooqqut-festival.jpg"
+                  alt="Qooqqut Festival"
+                  class="responsive-image"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Qooqqut Festival</h4>
+                <p>
+                  The annual Qooqqut festival brings music and culture to an
+                  isolated shore in the Nuuk fjord complex, cradled by the
+                  dramatic mountains of western Greenland.<br /><br />
+                  Organised by Greenland’s cultural centre, Katuaq, this year’s
+                  festival was held on August 14th and 15th. With no roads, no
+                  phone signal and no Internet onsite, Qooqqut offers a rare
+                  opportunity to step outside the everyday world and experience
+                  a diverse programme of music, workshops, and traditional
+                  sports.
+                </p>
+                <h5>Date 📅</h5>
+                <p>August 9, 2024 - August 10, 2024</p>
+                <h5>Location 📍</h5>
+                <p>Qooqqut</p>
+                <a
+                  href="https://visitgreenland.com/event/qooqqut-festival/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="/images/disko-bay-food-festival.jpg"
+                  alt="Disko Bay Food Festival"
+                  class="responsive-image"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Polar Circle Marathon</h4>
+                <p>
+                  The Polar Circle Marathon - often referred to as 'the coolest
+                  marathon on Earth' - takes place in Kangerlussuaq, Greenland.
+                  The endless ice and arctic tundra of this vast country are the
+                  backdrop for this unusual race, in which runners race through
+                  the soundless arctic desert past glacier tongues and moraine
+                  landscapes. <br /><br />This is a rare opportunity to visit
+                  one of the most remote corners of the world while daring to
+                  take part in an extremely challenging running event.
+                </p>
+                <h5>Date 📅</h5>
+                <p>October 26, 2024 - October 27, 2024</p>
+                <h5>Location 📍</h5>
+                <p>Kangerlussuaq</p>
+                <a
+                  href="https://polar-circle-marathon.com/"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
           </div>
         </section>
       </main>
