Changed photo of the third card

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <div class="card">
               <div class="card-header">
                 <img
-                  src="/images/disko-bay-food-festival.jpg"
-                  alt="Disko Bay Food Festival"
+                  src="/images/polar-circle-marathon.jpg"
+                  alt="Polar Circle Marathon"
                   class="responsive-image"
                 />
               </div>
