Added Google maps embed and removed some images

--- a/index.html
+++ b/index.html
@@ -70,12 +70,20 @@
 
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-colums">
                 <img
                   src="/images/disko-bay-food-festival.jpg"
                   alt="Disko Bay Food Festival"
                   class="responsive-image"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11532.205358443014!2d-51.20916371038542!3d68.81987865789449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e92a4161a6ea7b5%3A0x95c81e120bdea7b1!2sQasigiannguit%2C%20Greenland!5e0!3m2!1sen!2sse!4v1717674363793!5m2!1sen!2sse"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="embed"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Disko Bay Food Festival</h4>
@@ -102,12 +110,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-colums">
                 <img
                   src="/images/qooqqut-festival.jpg"
                   alt="Qooqqut Festival"
                   class="responsive-image"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7037.778637933011!2d-51.102817040595575!3d63.83334105140507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ea22e340cfda6ab%3A0x635c1f8de4160d5e!2sQooqqut!5e0!3m2!1sen!2sse!4v1717675198126!5m2!1sen!2sse"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Qooqqut Festival</h4>
@@ -135,12 +151,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-colums">
                 <img
                   src="/images/polar-circle-marathon.jpg"
                   alt="Polar Circle Marathon"
                   class="responsive-image"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12465.12347788792!2d-50.74001331682305!3d67.01257012846581!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e96acdbde161049%3A0x43803e2e1a11ca55!2sKangerlussuaq%2C%20Greenland!5e0!3m2!1sen!2sse!4v1717675239370!5m2!1sen!2sse"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Polar Circle Marathon</h4>
