Added photo gallery section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,52 @@
             </div>
           </div>
         </section>
+        <section>
+          <h2 class="text-center">Gallery</h2>
+          <h3 class="text-center">Photos of Greenland</h3>
+          <div class="grid grid-2-colums photo-gallery">
+            <img
+              src="/images/3-2-boatsunicegreenland.jpg"
+              alt="A photo of a boat"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-colourfultowngeenland.jpeg"
+              alt="A photo of a town with mountains in the background"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-countrysidegreenland.jpg"
+              alt="A photo of the countryside in Greenland"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-icerivergreenland.jpg"
+              alt="A photo of an icy river"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-islandhousesgreenland.jpg"
+              alt="A photo of houses on an island"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-northernlights.jpg"
+              alt="A photo of the Northern Lights"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-sunsetgreenland.jpg"
+              alt="A photo of a sunset"
+              class="responsive-image"
+            />
+            <img
+              src="/images/3-2-towngreenland.jpg"
+              alt="A photo of a town"
+              class="responsive-image"
+            />
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-with-first-narrow">
